--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -4,13 +4,14 @@ text-align: center;
 background: #32E6E8;
 color: #0344E8;
 text-align: center;
-font-size: 22px
+font-size: 24px
 }
 
 p {
 	font-family: "Courier New", monospace;
 	color: #0344E8;
 	text-align: center
+	font-size: 20px;
 
 }
 	body {
