--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -11,18 +11,18 @@ p {
 	font-family: "Courier New", monospace;
 	color: #0344E8;
 	text-align: center
-	font-size: 20px;
+	font-size: 18px;
 
 }
 	body {
 	background: #32E6E8;
 	text-align: center;
-	color: #0344E8;
-	font-family: Helvetica;
-}
+	color: #0344E
 hr {
 	width: 400px;
-	color: #fff;
+	color: #fff;8;
+	font-family: Helvetica;
+}
 }
 
 
