--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -2,14 +2,14 @@ h1 {
 font-family: Arial; sans-serif;
 text-align: center;
 background: #32E6E8;
-color: #0344E8;
+color: #000;
 text-align: center;
 font-size: 24px
 }
 
 p {
 	font-family: "Courier New", monospace;
-	color: #0344E8;
+	color: #000;
 	text-align: center
 	font-size: 18px;
 
@@ -17,12 +17,10 @@ p {
 	body {
 	background: #32E6E8;
 	text-align: center;
-	color: #0344E
+	color: #000
+
 hr {
-	width: 300px;
-	color: #fff;8;
-	font-family: Helvetica;
-}
+	width: 200px;
 }
 
 
