--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,29 +1,25 @@
 h1 {
-font-family: Arial; sans-serif;
-text-align: center;
-background: #32E6E8;
-color: #000;
-text-align: center;
-font-size: 24px
+	font-family: Arial; sans-serif;
+	text-align: center;
+	background: #32E6E8;
+	color: #000;
+	text-align: center;
+	font-size: 24px;
 }
-
 p {
 	font-family: "Courier New", monospace;
 	color: #000;
-	text-align: center
+	text-align: center;
 	font-size: 18px;
-
 }
 	body {
 	background: #32E6E8;
 	text-align: center;
-	color: #000
-
+	color: #000;
+}
 hr {
 	width: 200px;
 }
-
-
 a {
 	font-style: : italic;
 	color: #0344E8;
