--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -6,6 +6,11 @@ h1 {
 	text-align: center;
 	font-size: 24px;
 }
+h2 {
+	font-family: Arial;
+	text-align: center;
+	font-size: 20px;
+}
 p {
 	font-family: "Courier New", monospace;
 	color: #000;
