--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -7,12 +7,12 @@ h1 {
 	font-size: 24px;
 }
 h2 {
-	font-family: Arial;
+	font-family: georgia;
 	text-align: center;
 	font-size: 20px;
 }
 p {
-	font-family: "Courier New", monospace;
+	font-family: verdana, monospace;
 	color: #000;
 	text-align: center;
 	font-size: 18px;
