--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -7,15 +7,15 @@ h1 {
 	font-size: 24px;
 }
 h2 {
-	font-family: georgia;
+	font-family: verdana;
 	text-align: center;
 	font-size: 20px;
 }
 p {
-	font-family: verdana, monospace;
+	font-family: georgia, monospace;
 	color: #000;
 	text-align: center;
-	font-size: 18px;
+	font-size: 16px;
 }
 	body {
 	background: #32E6E8;
