--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Shadows+Into+Light');
 
-h1 {
+title {
 	font-family: Rock+Salt;
+	text-align: center;
+    font-size: 28px;
+}
+
+h1 {
+	font-family: Shadows+Intro+Light;
 	text-align: center;
 	background: #32E6E8;
 	color: #000;
-	text-align: center;
 	font-size: 24px;
 }
 h2 {
