--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -11,7 +11,8 @@ h1 {
 	text-align: center;
 	background: #32E6E8;
 	color: #000;
-	font-size: 24px;
+	font-style: italic;
+	font-size: 20px;
 }
 h2 {
 	font-family: Raleway;
