--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -13,6 +13,11 @@ h2 {
 	text-align: center;
 	font-size: 18px;
 }
+h3 {
+	font-family: Verdana;
+	text-align: center;
+	font-size: 14px;
+}
 p {
 	font-family: Shadows+Into+Light;
 	color: #000;
