--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Shadows+Into+Light');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway|Rock+Salt|Shadows+Into+Light');
 
 h1 {
-	font-family: Rock+Salt;
+	font-family: Permanent+Marker;
 	text-align: center;
 	background: #32E6E8;
 	color: #000;
