--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -6,12 +6,12 @@ h1 {
 	background: #32E6E8;
 	color: #000;
 	font-style: italic;
-	font-size: 30px;
+	font-size: 32px;
 }
 h2 {
 	font-family: Raleway;
 	text-align: center;
-	font-size: 24px;
+	font-size: 20px;
 }
 h3 {
 	font-family: Verdana;
@@ -19,7 +19,7 @@ h3 {
 	font-size: 20px;
 }
 p {
-	font-family: Shadows+Into+Light;
+	font-family: Shadows Into Light;
 	color: #000;
 	text-align: center;
 	line-height: 1.5em;
