--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -14,12 +14,12 @@ h2 {
 	font-size: 20px;
 }
 h3 {
-	font-family: Verdana;
+	font-family: Shadows Into Light;
 	text-align: center;
 	font-size: 20px;
 }
 p {
-	font-family: Shadows Into Light;
+	font-family: Rock Salt;
 	color: #000;
 	text-align: center;
 	line-height: 1.5em;
