unit 4 css updates

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -19,7 +19,7 @@ h3 {
 	font-size: 20px;
 }
 p {
-	font-family: Rock Salt;
+	font-family: Verdana;
 	color: #000;
 	text-align: center;
 	line-height: 1.5em;
