unit 4 css update

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -16,7 +16,6 @@ h2 {
 h3 {
 	font-family: Shadows Into Light;
 	text-align: center;
-	font-color: #B20E00;
 	font-size: 28px;
 }
 p {
@@ -30,7 +29,7 @@ p {
 	body {
 	background: #32E6E8;
 	text-align: center;
-	color: #000;
+	color: #B20E00;;
 }
 hr {
 	width: 200px;
