--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -121,6 +121,7 @@ img {
     padding: 20px;
     float: right;   
     width: 30%;
+    display: inline-block;
 }
 .clearfix:after {
     visibility: hidden;
