--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -59,9 +59,9 @@ nav {
 	display: inline-block;
 }
 .column {
-	width: 260px
-	height: 300px
-	padding: 20px
+	width: 260px;
+	height: 300px;
+	padding: 20px;
 	margin: 0;
 }
 #wrapper {
