--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -121,7 +121,7 @@ img {
     border: .2em gray solid;
     padding: 1em;
     float: left;
-    width: 95%;
+    width: 100%;
 }
 
 .clearfix:after {
@@ -149,6 +149,4 @@ footer {
 	width: device-width;
 }
 
-@media only screen and (max-width: 320px) {
-	
-	}
+@media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)
