--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -55,12 +55,12 @@ nav {
 } 
 a {	
 	text-decoration: none;
-	color: #B20E00;
+	color: #A400ff;
 	margin: 1em;
 	display: inline-block;
 }
 a:link {
-	color: black;
+	color: blue;
 	font-size: 15px;
 	text-decoration: none;
 }
