--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -154,7 +154,7 @@ a:hover {
 	color: orange;
 }
 
-@media screen and (max-width: 600px)  {
+@media screen and (max-width: 320px)  {
 	#samples img {
 		width: 100%;
 		float:none;
@@ -164,7 +164,18 @@ a:hover {
 		width: 100%;
 	}
 }
-@media screen and (max-width: 1003px)  {
+
+@media screen and (max-width: 640px)  {
+	#samples img {
+		width: 100%;
+		float:none;
+	}
+
+	#wrapper img {
+		width: 100%;
+	}
+}
+@media screen and (max-width: 1011px)  {
 	#samples img {
 		width: 100%;
 		float:none;
