--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -55,11 +55,11 @@ nav {
 } 
 a {	
 	text-decoration: none;
-	color: #0022f;
+	color: #0022f0;
 	margin: 1em;
 	display: inline-block;
 }
-a:link {
+a:hover {
 	color: #A400ff;
 	font-size: 15px;
 	text-decoration: none;
@@ -154,10 +154,11 @@ a:hover {
 	color: orange;
 }
 
+
 @media screen and (max-width: 320px)  {
 	#samples img {
 		width: 100%;
-		float:none;
+		float: none;
 	}
 
 	#wrapper img {
@@ -165,20 +166,21 @@ a:hover {
 	}
 }
 
-@media screen and (max-width: 640px)  {
+@media screen and (max-width: 720px)  {
 	#samples img {
 		width: 100%;
-		float:none;
+		float: none;
 	}
 
 	#wrapper img {
 		width: 100%;
 	}
+	
 }
 @media screen and (max-width: 1011px)  {
 	#samples img {
 		width: 100%;
-		float:none;
+		float: none;
 	}
 
 	#wrapper img {
